local.conf: enable xattr and selinux distro features
In order to have SELinux image we need to have xattr and selinux
in distro features so packages compiled with selinux configuration.

Change-Id: Ibf8495cabdb0873261d4e815d77ebf6be5d4f33a
Signed-off-by: Victor Kamensky <kamensky@cisco.com>

--- a/meta-poky/conf/local.conf.sample
+++ b/meta-poky/conf/local.conf.sample
@@ -230,6 +230,10 @@ PACKAGECONFIG_append_pn-qemu-native = " sdl"
 PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 #ASSUME_PROVIDED += "libsdl-native"
 
+DISTRO_FEATURES_append = " acl xattr pam selinux"
+PREFERRED_PROVIDER_virtual/refpolicy ?= "refpolicy-targeted"
+IMAGE_FSTYPES_append = " ${INITRAMFS_FSTYPES}"
+
 # CONF_VERSION is increased each time build/conf/ changes incompatibly and is used to
 # track the version of this file when it was generated. This can safely be ignored if
 # this doesn't mean anything to you.
